# -InsightForge-Studio

./: Dockerfile  README.md  app.py  eda_engine.py  model_selector.py  requirements.txt
-InsightForge-Studio/: pyproject.toml
InsightForgeStudio/: LICENSE
