[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insightforge-studio"
version = "0.1.0"
description = "Streamlit app for automated EDA, feature engineering, and explainable ML workflows"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "streamlit",
    "pandas",
    "ydata-profiling",
    "scikit-learn",
    "xgboost",
    "mlflow",
    "shap",
    "imbalanced-learn",
]

[project.urls]
Homepage = "https://github.com/your-username/your-repo-name"
Repository = "https://github.com/your-username/your-repo-name"

[tool.setuptools]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"